--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/usr/local/opt/python/bin/python3.7"
+    "python.pythonPath": "/Users/lukazphelps/Desktop/SchoolCode/Mythril_Spellbook/venv/bin/python3"
 }
