--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,31 @@
-alembic==1.4.2
-click==7.1.1
-Flask==1.1.2
-Flask-Migrate==2.5.3
+alembic==1.3.2
+autopep8==1.4.4
+Babel==2.8.0
+blinker==1.4
+Click==7.0
+dominate==2.4.0
+Flask==1.1.1
+Flask-Babel==0.12.2
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+Flask-Migrate==2.5.2
+Flask-Moment==0.9.0
 Flask-SQLAlchemy==2.4.1
-Flask-WTF==0.14.3
+Flask-WTF==0.14.2
+gunicorn==20.0.4
 itsdangerous==1.1.0
-Jinja2==2.11.2
-Mako==1.1.2
+Jinja2==2.10.3
+Mako==1.1.0
 MarkupSafe==1.1.1
+pycodestyle==2.5.0
+PyJWT==1.7.1
 python-dateutil==2.8.1
+python-dotenv==0.10.3
 python-editor==1.0.4
-six==1.14.0
-SQLAlchemy==1.3.16
-Werkzeug==1.0.1
-WTForms==2.3.1
+pytz==2019.3
+six==1.13.0
+SQLAlchemy==1.3.12
+visitor==0.1.3
+Werkzeug==0.16.0
+WTForms==2.2.1
