--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,88 @@
-alembic==1.4.2
-click==7.1.1
-Flask==1.1.2
-Flask-Migrate==2.5.3
+alembic==1.3.2
+appnope==0.1.0
+attrs==19.3.0
+autopep8==1.4.4
+Babel==2.8.0
+backcall==0.1.0
+bcrypt==3.1.7
+bleach==3.1.0
+blinker==1.4
+cffi==1.14.0
+Click==7.0
+cycler==0.10.0
+decorator==4.4.1
+defusedxml==0.6.0
+dominate==2.4.0
+entrypoints==0.3
+Flask==1.1.1
+Flask-Babel==0.12.2
+Flask-Bcrypt==0.7.1
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+Flask-Migrate==2.5.2
+Flask-Moment==0.9.0
 Flask-SQLAlchemy==2.4.1
-Flask-WTF==0.14.3
+Flask-WTF==0.14.2
+gunicorn==20.0.4
+ipykernel==5.1.3
+ipython==7.11.1
+ipython-genutils==0.2.0
 itsdangerous==1.1.0
-Jinja2==2.11.2
-Mako==1.1.2
+jedi==0.15.2
+Jinja2==2.10.3
+json5==0.8.5
+jsonschema==3.2.0
+jupyter-client==5.3.4
+jupyter-core==4.6.1
+jupyterlab==1.2.5
+jupyterlab-server==1.0.6
+kiwisolver==1.1.0
+Mako==1.1.0
 MarkupSafe==1.1.1
-psycopg2-binary==2.8.5
+matplotlib==3.1.2
+mistune==0.8.4
+more-itertools==8.2.0
+nbconvert==5.6.1
+nbformat==5.0.4
+notebook==6.0.3
+numpy==1.18.1
+packaging==20.1
+pandas==0.25.3
+pandocfilters==1.4.2
+parso==0.5.2
+peewee==3.13.2
+pexpect==4.8.0
+pickleshare==0.7.5
+pluggy==0.13.1
+prometheus-client==0.7.1
+prompt-toolkit==3.0.2
+ptyprocess==0.6.0
+py==1.8.1
+pycodestyle==2.5.0
+pycparser==2.20
+Pygments==2.5.2
+PyJWT==1.7.1
+pyparsing==2.4.6
+pyrsistent==0.15.7
+pytest==5.3.5
 python-dateutil==2.8.1
+python-dotenv==0.10.3
 python-editor==1.0.4
-six==1.14.0
-SQLAlchemy==1.3.16
-Werkzeug==1.0.1
-WTForms==2.3.1
+pytz==2019.3
+pyzmq==18.1.1
+scipy==1.4.1
+seaborn==0.10.0
+Send2Trash==1.5.0
+six==1.13.0
+SQLAlchemy==1.3.12
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.3
+traitlets==4.3.3
+virtualenv==16.7.9
+visitor==0.1.3
+wcwidth==0.1.8
+webencodings==0.5.1
+Werkzeug==0.16.0
+WTForms==2.2.1
